--- a/res/layout/activity_plan.xml
+++ b/res/layout/activity_plan.xml
@@ -187,7 +187,7 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:scaleType="centerInside"
-                    android:src="@drawable/panying_img" />
+                    android:src="@drawable/xiangqing_img" />
 
                 <TextView
                     android:layout_width="wrap_content"
